gccida/c3/dump_bb
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dump_bb/src/cfgrtl.c:1904:10: error: use of undeclared identifier 'unk_661077'
fwrite( &unk_661077, 0x11uLL, 1uLL, outf); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dump_bb/src/obj/cfgrtl.o] Error 1
